# wine_get_version.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
tests/: tests.py
wine_get_version/: __init__.py
